[gd_scene load_steps=6 format=3 uid="uid://kdpp3mibml33"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/Events/Fields/field_number.gd" id="1_0jdnn"]
[ext_resource type="Texture2D" uid="uid://dh1ycbmw8anqh" path="res://addons/dialogic/Editor/Images/Interactable/increment_icon.svg" id="3_v5cne"]
[ext_resource type="Texture2D" uid="uid://brjikovneb63n" path="res://addons/dialogic/Editor/Images/Interactable/decrement_icon.svg" id="4_ph52o"]
[ext_resource type="Theme" uid="uid://krxxw16nf7fv" path="res://addons/dialogic/Editor/Theme/ValueChangeButtonTheme.tres" id="4_ql6rp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dle1"]
content_margin_left = 4.0
content_margin_right = 2.0

[node name="Field_Number" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1102.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("1_0jdnn")

[node name="Label" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_8dle1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8dle1")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
tab_size = 2
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
text_direction = 1

[node name="Value" type="LineEdit" parent="."]
layout_mode = 2
theme_type_variation = &"DialogicEventEdit"
theme_override_constants/minimum_character_width = 0
text = "0"
expand_to_text_length = true

[node name="Spin" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Increment" type="Button" parent="Spin"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
auto_translate = false
focus_neighbor_left = NodePath("../../Value")
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../Decrement")
theme = ExtResource("4_ql6rp")
theme_type_variation = &"IncrementButton"
icon = ExtResource("3_v5cne")
flat = true
vertical_icon_alignment = 2

[node name="Decrement" type="Button" parent="Spin"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
auto_translate = false
focus_neighbor_left = NodePath("../../Value")
focus_neighbor_top = NodePath("../Increment")
focus_neighbor_bottom = NodePath(".")
theme = ExtResource("4_ql6rp")
theme_type_variation = &"DecrementButton"
icon = ExtResource("4_ph52o")
flat = true
vertical_icon_alignment = 2

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2
size_flags_horizontal = 0

[connection signal="focus_exited" from="Value" to="." method="_on_value_focus_exited"]
[connection signal="text_submitted" from="Value" to="." method="_on_value_text_submitted"]
[connection signal="button_up" from="Spin/Increment" to="." method="_on_increment_clicked"]
[connection signal="button_up" from="Spin/Decrement" to="." method="_on_decrement_clicked"]
